# DiscreteElasticRods

./: .gitattributes  CMakeLists.txt  FluffyHead.pro  LICENSE  Makefile  README.md  ui_MainWindow.h
assets/: MayaGetSelectedPrimitives.py  scene1.mg  scene1_long_curly.mg  scene1_long_straight.mg  scene1_long_wavy.mg  scene1_short_curly.mg  scene1_short_straight.mg  scene2_long_curly.mg  scene2_long_straight.mg  scene2_long_wavy.mg  scene2_short_curly.mg  scene2_short_straight.mg
cmake/: FindCML.cmake  FindDLIB.cmake  FindOpenCL.cmake
include/: AABB.h  AbstractRK4Integrator.h  AnimationBuffer.h  BasicParser.h  Camera.h  CollisionEllipsoid.h  CollisionObject.h.autosave  CollisionShape.h  Config.h  ElasticRod.h  ElasticRodState.h  Exporter.h  GLRenderer.h  GLUtils.h  GLWindow.h  Hair.h  HairExporter.h  HairGenerator.h  HairStrand.h  HairyObject.h  IServant.h  Loader.h  MainWindow.h  Mesh.h  ObjLoader.h  ObjParser.h.autosave  Particle.h  RenderObject.h  Scene.h  SceneLoader.h  Spiral.h  TransformTool.h  Types.h  Utils.h  VoxelGrid.h  config.h
libs/dlib-18.9/dlib/: README.txt  revision.h
libs/dlib-18.9/docs/: algorithms.html  api.html  assignment_learning_ex.cpp.html  bayes.html  books.html  change_log.html  compile.html  compression.html  containers.html  face_detector.py.html  faq.html  graph_tools.html  howto_contribute.html  image_ex.cpp.html  imaging.html  index.html  intro.html  kernel_1a.html  kernel_1b.html  kernel_1c.html  kernel_1da.html  kernel_1db.html  kernel_1ea.html  kernel_1eb.html  kernel_1ec.html  kernel_2a.html  kernel_3a.html  kernel_3b.html  kkmeans_ex.cpp.html  license.html  linear_algebra.html  max_cost_assignment.py.html  metaprogramming.html  ml.html  model_selection_ex.cpp.html  network.html  old_change_log.html  old_release_notes.html  optimization.html  other.html  (+10 more)
libs/dlib-18.9/docs/dlib/: CMakeLists.txt.html  array2d.h.html  assert.h.html  bsp.h.html  clustering.h.html  console_progress_indicator.h.html  enable_if.h.html  float_details.h.html  geometry.h.html  image_io.h.html  image_processing.h.html  image_transforms.h.html  iosockstream.h.html  matrix.h.html  noncopyable.h.html  pixel.h.html  revision.h.html  serialize.h.html  simd.h.html  sockstreambuf.h.html  sparse_vector.h.html  stack_trace.h.html  statistics.h.html  timing.h.html  tuple.h.html  unordered_pair.h.html  vectorstream.h.html
libs/dlib-18.9/docs/python/: genindex.html  (+3 more)
scripts/: ffmpeg_video.sh
shaders/: ColorFrag.glsl  ColorVert.glsl  ColourFrag.glsl  ColourGeom.glsl  ColourVert.glsl  ConstantColorFrag.glsl  ConstantFrag.glsl  ConstantVert.glsl  DebugFrag.glsl  DebugGeom.glsl  DebugVert.glsl  Phong.fs  Phong.vs  PhongFrag.glsl  PhongFragment.glsl  PhongVert.glsl  PhongVertex.glsl  TubeFrag.glsl  TubeGeom.glsl  TubeTCS.glsl  TubeTES.glsl  TubeVert.glsl
src/: AABB.cpp  AABB.h  AbstractRK4Integrator.cpp  AnimationBuffer.h  BasicParser.h  Camera.cpp  Camera.h  CollisionEllipsoid.cpp  CollisionShape.cpp  CollisionShape.h  ElasticRod.cpp  ElasticRod.h  ElasticRod2.cpp  ElasticRodBKP.cpp  ElasticRodBKP2.cpp  ElasticRodState.h  Exporter.cpp  Exporter.h  GLRenderer.cpp  GLRenderer.h  GLUtils.cpp  GLUtils.h  GLWindow.cpp  GLWindow.h  Hair.cpp  Hair.h  HairExporter.cpp  HairGenerator.cpp  HairGenerator.h  HairState.h  HairStrand.cpp  Loader.cpp  MainWindow.cpp  MainWindow.h  Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h  RenderObject.cpp  RenderObject.h  (+15 more)
ui/: MainWindow.ui
(+390 files in other folders)
